# biotracker_utility

./: .gitignore  .gitlab-ci.py  .gitlab-ci.yml  CMakeLists.txt
Src/: CMakeLists.txt  IConfig.h
Src/Utility/: IConfig.cpp  IConfig.h  misc.cpp  misc.h
Src/Utility/TrackedComponents/: TrackedComponentFactory.cpp  TrackedComponentFactory.h  TrackedElement.cpp  TrackedElement.h  TrackedTrajectory.cpp  TrackedTrajectory.h
Src/settings/: Settings.cpp  StringTranslator.cpp  StringTranslator.h
Src/util/: misc.cpp
ci/: configure.py  prepare.py
cmake/: BT_UtilityConfig.cmake.in  Headers.cmake  TrackerPlugin.cmake  VSSugar.cmake  biotracker-utilityConfig.cmake.in
